--- a/interfaces/assets/css/style.css
+++ b/interfaces/assets/css/style.css
@@ -16,5 +16,13 @@
 }
 
 h1,h2,h3,h4,h5,h6 {
-    font-family: 'poppins-bold', Arial, sans-serif !important;
+    font-family: 'poppins-semibold', Arial, sans-serif !important;
+}
+
+#delete-box {
+    margin: 20px 30px;
+    padding: 20px;
+    border-radius: 5px;
+    color: rgba(0,0,0,.6);
+    background-color: #eee;
 }
